logs/2023-04-02_13-37-54.txt
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  3 21.3M    3  783k    0     0   969k      0  0:00:22 --:--:--  0:00:22  967k100 21.3M  100 21.3M    0     0  14.1M      0  0:00:01  0:00:01 --:--:-- 14.1M
npm WARN deprecated node-pre-gyp@0.17.0: Please upgrade to @mapbox/node-pre-gyp: the non-scoped node-pre-gyp package is deprecated and only the @mapbox scoped package will recieve updates in the future

added 67 packages, and audited 68 packages in 3s

3 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
npm notice 
npm notice New major version of npm available! 8.15.0 -> 9.6.3
npm notice Changelog: <https://github.com/npm/cli/releases/tag/v9.6.3>
npm notice Run `npm install -g npm@9.6.3` to update!
npm notice 

changed 1 package, and audited 119 packages in 587ms

17 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
/home/minecraft/multicraft/servers/server460793/src/official-links.js:24
			value: `**__Twitter__** : [movinfrens](https://twitter.com/movinfrens`),
			                                                                      ^

SyntaxError: Unexpected token ')'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1055:15)
    at Module._compile (node:internal/modules/cjs/loader:1090:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/home/minecraft/multicraft/servers/server460793/index.js:13:26)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
